2013-10-15  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.cpp:
	* TransformHandle.wrl:
	* Circle2D.cpp:
	* LineProperties.cpp:
	* IndexedLineSet.h:
	* IndexedLineSet.cpp:
	* IndexedFaceSet.cpp: 

2013-10-15  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl:
	* Viewpoint.cpp:
	* OrthoViewpoint.cpp: 

2013-10-14  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserContext.cpp:
	* Appearance.cpp:
	* BrowserOptions.cpp:
	* RenderingProperties.h:
	* TextureProperties.cpp:
	* RenderingProperties.cpp: 

2013-10-13  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DRenderer.cpp:
	* X3DBrowserContext.cpp:
	* X3DBrowserSurface.cpp:
	* Viewpoint.cpp:
	* BrowserOptions.h:
	* BrowserOptions.cpp:
	* RenderingProperties.h:
	* RenderingProperties.cpp: 

2013-10-12  Holger Seelig  <holger.seelig@yahoo.de>

	* x3d+binary.xml: 

2013-10-12  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* vrml.png:
	* x3d+xml.png:
	* x3d+vrml.xml:
	* x3d+vrml.png:
	* GarbargeCollector.cpp:
	* x3d+binary.png:
	* x3d+binary.xml:
	* model-vrml.svg:
	* model-x3d+xml.svg:
	* model-x3d+vrml.svg:
	* model-x3d+binary.svg: 

2013-10-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* SceneLoader.h:
	* TextureLoader.h:
	* SceneLoader.cpp:
	* Texture.h:
	* TextureLoader.cpp:
	* TexturePtr.h:
	* X3DBrowserSurface.cpp:
	* Inline.cpp:
	* ImageTexture.h:
	* ImageTexture.cpp:
	* X3DTexture2DNode.h:
	* X3DTexture2DNode.cpp: 

2013-10-11  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* Router.h:
	* Router.cpp:
	* Loader.h:
	* Loader.cpp:
	* SceneLoader.cpp:
	* GarbageCollector.h:
	* x3d+xml.xml:
	* GarbargeCollector.cpp:
	* X3DBrowserContext.h:
	* X3DBrowserContext.cpp:
	* X3DBrowserSurface.cpp:
	* ImageTexture.cpp:
	* jsLockGuard.h:
	* jsContext.cpp:
	* RenderingProperties.cpp: 

2013-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* Material.cpp:
	* jsContext.h:
	* jsLockGuard.h: