@@ -1,5 +1,11 @@
 2013-10-15  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* TransformHandle.wrl:
+	* Circle2D.cpp:
+	* CylinderSensor.cpp: 
+
+2013-10-15  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* TransformHandle.cpp:
 	* TransformHandle.wrl:
 	* Circle2D.cpp:
